<resources>
    <string name="app_name">Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connecter">Connecter</string>
    <string name="appareil_connecter">Appareil à connecter</string>
    <string name="mode_programm">Mode programmé</string>
    <string name="textview">TextView</string>
    <string name="infos">INFOS</string>
    <string name="todo">TODO</string>
    <string name="deconnection">Deconnection</string>
    <string name="charger">Charger</string>
    <string name="direction">Direction</string>
    <string name="vitesse_pas_s">Vitesse (pas/s)</string>
    <string name="focus_stacking">Focus Stacking</string>
    <string name="nombre_de_camera">Nombre de camera</string>
    <string name="param_tres">Paramètres</string>
    <string name="envoyer">Envoyer</string>
    <string name="nombre_de_photos">Nombre de photos</string>
    <string name="frame">Frame</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="nombre_de_pas_de_la_table">Nombre de pas de la table</string>
    <string name="pause_entre_les_cameras">Pause entre les cameras</string>
    <string name="nombre_de_cameras">Nombre de cameras</string>
    <string name="vitesse">Vitesse</string>
    <string name="_400">400</string>
    <string name="acceleration">Acceleration</string>
    <string name="_4000">4000</string>
    <string name="acceleration_pas_s2">Acceleration (pas/s2)</string>
    <string name="_1000">1000</string>
    <string name="pause_entre_chaques_cameras_s">Pause entre chaques cameras (s)</string>
    <string name="steps">Steps</string>
    <string name="_200">200</string>
    <string name="_5">5</string>
    <string name="_0">0</string>
    <string name="charger_temps_r_el">Charger Temps Réel</string>
</resources>
