<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        tools:context=".Activité_n2.Fragments.Programmé.Programme">

        <TextView
            android:id="@+id/StepsTextMoteur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/nombre_de_pas_de_la_table"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DirectionProgramme" />

        <TextView
            android:id="@+id/CameraNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nombre_de_cameras"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/StepsProgramme" />

        <EditText
            android:id="@+id/VitesseProgramme"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:autofillHints=""
            android:inputType="number"
            android:hint="@string/vitesse"
            android:textColor="@android:color/background_light"
            android:textColorHint="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/_400"
            app:layout_constraintTop_toBottomOf="@+id/VitesseText" />

        <EditText
            android:id="@+id/AccelerationProgramme"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:autofillHints=""
            android:inputType="number"
            android:hint="@string/acceleration"
            android:textColor="@android:color/background_light"
            android:textColorHint="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/_4000"
            app:layout_constraintTop_toBottomOf="@+id/AccelerationText" />

        <TextView
            android:id="@+id/AccelerationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/acceleration_pas_s2"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Programme" />

        <EditText
            android:id="@+id/Pause_between_camera_Programme"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:autofillHints=""
            android:inputType="number"
            android:hint="@string/pause_entre_les_cameras"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/_1000"
            app:layout_constraintTop_toBottomOf="@+id/PauseTextCamera" />

        <TextView
            android:id="@+id/PauseTextCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/pause_entre_chaques_cameras_s"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Camera_Number_Programme" />

        <EditText
            android:id="@+id/StepsProgramme"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:autofillHints=""
            android:inputType="number"
            android:hint="@string/steps"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/_200"
            app:layout_constraintTop_toBottomOf="@+id/StepsTextMoteur" />

        <Button
            android:id="@+id/save_programme"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/sauvegarder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/charger" />

        <Switch
            android:id="@+id/Focus_stacking_Programme"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:checked="false"
            android:hint="@string/focus_stacking"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Pause_between_camera_Programme" />

        <TextView
            android:id="@+id/Programme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/mode_programm"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Camera_Number_Programme"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:autofillHints=""
            android:inputType="number"
            android:hint="@string/nombre_de_camera"
            android:textColor="@android:color/background_light"
            android:textColorHint="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/_0"
            app:layout_constraintTop_toBottomOf="@+id/CameraNumberText" />

        <TextView
            android:id="@+id/VitesseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/vitesse_pas_s"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AccelerationProgramme" />

        <Button
            android:id="@+id/charger"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/charger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space" />

        <Switch
            android:id="@+id/DirectionProgramme"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/direction"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/VitesseProgramme" />

        <Button
            android:id="@+id/send_programme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/envoyer"
            app:layout_constraintBottom_toBottomOf="@+id/charger"
            app:layout_constraintEnd_toStartOf="@+id/charger"
            app:layout_constraintStart_toEndOf="@+id/save_programme"
            app:layout_constraintTop_toTopOf="@+id/charger" />

        <Button
            android:id="@+id/parametrage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/param_tres"
            app:layout_constraintEnd_toEndOf="@+id/send_programme"
            app:layout_constraintStart_toEndOf="@+id/save_programme"
            app:layout_constraintTop_toBottomOf="@+id/Focus_stacking_Programme" />

        <TextView
            android:id="@+id/FrameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nombre_de_photos"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/FrameProgramme"
            app:layout_constraintTop_toBottomOf="@+id/StepsProgramme" />

        <EditText
            android:id="@+id/FrameProgramme"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:autofillHints=""
            android:inputType="number"
            android:hint="@string/frame"
            android:textColor="@android:color/background_light"
            android:textColorHint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/CameraNumberText"
            android:text="@string/_5"
            app:layout_constraintTop_toBottomOf="@+id/FrameText" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parametrage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
